--- a/wp-content/plugins/events-manager/includes/css/events_manager_admin.css
+++ b/wp-content/plugins/events-manager/includes/css/events_manager_admin.css
@@ -74,12 +74,7 @@ table.events-table .category { color:#888; }
 			#event-tickets th { width:auto; }
 			#event-tickets th.ticket-status { width:20px; }
 			/* Overlay Form */
-			#em-tickets-form { margin-top:10px; display:none; }
 			#em-tickets-form input[type=text] { width:97%; padding:2px; color:#666; }
-			#em-tickets-form { background-color:#fff; color:#333; display:none; width:350px; padding:15px; text-align:left;  border:2px solid #333; opacity:0.8; -moz-border-radius:6px; -webkit-border-radius:6px; -moz-box-shadow: 0 0 50px #ccc; -webkit-box-shadow: 0 0 50px #ccc; }
-			#em-tickets-form h4 { font-size:16px; margin:0px; padding:0px; }
-			#em-tickets-form form { overflow:auto; }
-			#em-tickets-form .close { background:url(../images/close.png) 0px 0px no-repeat  !important; position:absolute; right:-15px; top:-15px; cursor:pointer; height:35px; width:35px; border:none; padding:0px; margin:0px; }
 			#em-tickets-form #wp-submit { display:block; clear:both; }
 			/*Inline Form */
 			.em-ticket-form { padding:0px 10px; margin-bottom:10px; width:400px; }
@@ -93,8 +88,8 @@ table.events-table .category { color:#888; }
 
 /* Booking Form */
 	div#em-loading { position:absolute; width:100%; height:100%; background:#FFFFFF url(../images/loading.gif) 50% 50% no-repeat; left:0px; top:0px; opacity:0.8; filter:alpha(opacity=80)}
-	#em-booking { margin:15px 0px 10px 0px; position:relative; }
-	#em-booking-form  { position:relative; clear:left; }
+	.em-booking { margin:15px 0px 10px 0px; position:relative; }
+	.em-booking-form  { position:relative; clear:left; }
 	.em-booking-form-details  { padding:10px; width:360px; float:left; }  
 	.em-booking-form-details input.input, .em-booking-form-details textarea { width:250px; }
 	.em-booking-form-details p { clear:left; }
@@ -102,7 +97,7 @@ table.events-table .category { color:#888; }
 	.em-booking-form-details span.input-group input { margin-left:-20px; }
 	.em-booking-form-details span.input-group { display:block; margin-left:120px; }
 	.em-booking-form-details .em-booking-submit { width:auto; }	
-	#em-booking-form label  { display:inline-block; width:100px; }
+	.em-booking-form label  { display:inline-block; width:100px; }
 	/* Message Errors */
 		div.em-booking-message { margin:10px 0px; padding:10px; color:#333; border-radius:3px; }
 		div.em-booking-message p { margin:10px 0px !important; padding:0px; color:#333; }
@@ -126,19 +121,12 @@ table.events-table .category { color:#888; }
 			#em-bookings-table-export, #em-bookings-table-settings { width:500px; height: 75%; }
 			#em-bookings-table-export form, #em-bookings-table-settings form { height: 100%; overflow:auto; }	
 			/* Sorting */
-				.em-bookings-table ul.em-bookings-cols-sortable { list-style-type: none; margin: 0; padding: 0 0 10px; float: left; margin-right: 10px; }
-				.em-bookings-table ul.em-bookings-cols-sortable li { margin: 0 5px 5px 5px; padding: 3px 8px; font-size: 12px; width: 120px; font-weight:none; cursor:move; }
-				.em-bookings-table ul.em-bookings-cols-sortable li.ui-state-highlight {}
-				.em-bookings-table ul.em-bookings-cols-sortable li.ui-state-default { color:#999; }
+				.em-bookings-table-overlay ul.em-bookings-cols-sortable { list-style-type: none; margin: 0; padding: 0 0 10px; float: left; margin-right: 10px; }
+				.em-bookings-table-overlay ul.em-bookings-cols-sortable li { margin: 0 5px 5px 5px; padding: 3px 8px; font-size: 12px; width: 120px; font-weight:none; cursor:move; }
+				.em-bookings-table-overlay ul.em-bookings-cols-sortable li.ui-state-highlight {}
+				.em-bookings-table-overlay ul.em-bookings-cols-sortable li.ui-state-default { color:#999; }
 				#em-bookings-export-cols-inactive, #em-bookings-cols-inactive { width:300px; }	
-				#em-bookings-export-cols-inactive li, #em-bookings-cols-inactive li { float:left; } 	
-	/* Booking Overlay Forms*/
-		.em-bookings-table-overlay { margin-top:10px; display:none; }
-		.em-bookings-table-overlay input[type=text] { width:97%; padding:2px; color:#666; }
-		.em-bookings-table-overlay { background-color:#fff; color:#333; display:none; width:350px; padding:15px; text-align:left;  border:2px solid #333; opacity:0.8; -moz-border-radius:6px; -webkit-border-radius:6px; -moz-box-shadow: 0 0 50px #ccc; -webkit-box-shadow: 0 0 50px #ccc; }
-		.em-bookings-table-overlay h4 { font-size:16px; margin:0px; padding:0px; }
-		.em-bookings-table-overlay form { overflow:auto; }
-		.em-bookings-table-overlay .close { background:url(../images/close.png) 0px 0px no-repeat  !important; position:absolute; right:-15px; top:-15px; cursor:pointer; height:35px; width:35px; border:none; padding:0px; margin:0px; }
+				#em-bookings-export-cols-inactive li, #em-bookings-cols-inactive li { float:left; }
 	/* Single Booking Edit View */
 		#em-bookings-admin-booking .em-booking-single-info { display:none; }		
 
@@ -164,7 +152,7 @@ table.em-caps-table th, table.em-caps-table td { width:auto !important; }
 .em-docs-atts dl dd { margin-left:120px !important; }
 
 /* Time Picker */
-#start-time.error, #end-time.error { border:#cc0000 1px solid; }
+.em-time-input.error { border:#cc0000 1px solid; }
 div.time-picker {  position: absolute; height: 191px; width:4.5em; /* needed for IE */ overflow: auto; background: #fff; border: 1px solid #aaa; z-index: 99; margin: 0; }
 div.time-picker-12hours { width:6.5em; /* needed for IE */ }
 div.time-picker ul { list-style-type: none; margin: 0; padding: 0; }
