--- a/wp-content/themes/maine-learning-sites/style.css
+++ b/wp-content/themes/maine-learning-sites/style.css
@@ -104,9 +104,11 @@ textarea
 	text-decoration: none;
 }
 
-h2, h2 a, h2 a:visited { 
-	font-size: 18px;
-	margin: 20px 0 10px 0; }
+h2, h2 a, h2 a:visited
+{
+	font-size: 17px;
+	margin: 20px 0 10px 0;
+}
 
 input
 {
@@ -152,8 +154,7 @@ ol li { list-style-type: decimal; }
 /* Hyperlinks
 ------------------------------------------------------------ */
 
-a,
-a:visited
+a, a:link, a:visited, a:active
 {
 	color: #14748F;
 	font-weight: bold;
@@ -316,11 +317,7 @@ li.sfHover { position: static; }
 #header ul.menu li a.sf-with-ul,
 #nav li a.sf-with-ul,
 #subnav li a.sf-with-ul { padding-right: 25px; }
-
-li a .sf-sub-indicator
-{
-	display: none;
-}
+li a .sf-sub-indicator { display: none; }
 
 li li a .sf-sub-indicator
 {
@@ -739,28 +736,53 @@ li li a .sf-sub-indicator
 .sidebar-content-sidebar #content-sidebar-wrap,
 .sidebar-sidebar-content #content-sidebar-wrap { float: right; }
 
+/* Widget areas
+------------------------------------------------------------ */
+
+.widget-area h4
+{
+	background-color: transparent;
+	/* ML */
+	border-bottom: none;
+	/* ML */
+	font-size: 14px;
+	/* ML */
+	margin: 0 0 5px;
+	padding: 6px 5px 5px 0;
+	/* ML */
+	text-transform: uppercase;
+	/* ML */
+}
+
+.widget-area h4 a { text-decoration: none; }
+
 /* Content
 ------------------------------------------------------------ */
 
 #content
 {
 	float: left;
-	padding: 20px 30px 10px 30px;
+	padding: 20px 0 10px 30px;
 	/* ML */
 	min-width: 440px;
 	/* ML */
 }
 
 .content-sidebar #content,
-.sidebar-content #content { width: 600px; }
+.sidebar-content #content
+{
+	max-width: 600px;
+	width: 100%;
+}
+
 .sidebar-content #content,
 .sidebar-sidebar-content #content { float: right; }
 
 .full-width-content #content
 {
 	max-width: 960px;
-	width: 100%
 	/* ML */
+	width: 100%;
 }
 
 .standard-form textarea { margin-left: 0 !important; }
@@ -774,7 +796,7 @@ blockquote
 
 .post { margin: 0 0 40px; }
 .entry-content { overflow: hidden; }
-.entry-content p { padding: 0 0 15px; }
+.entry-content p { padding: 0 0 20px 0; }
 
 div.entry-content div
 {
@@ -937,34 +959,6 @@ h3
 }
 
 h4 { font-size: 16px; }
-
-.widget-area h4
-{
-	background-color: transparent;
-	/* ML */
-	border-bottom: none;
-	/* ML */
-	font-size: 14px;
-	/* ML */
-	margin: 0 0 5px;
-	padding: 6px 5px 5px 0;
-	/* ML */
-	text-transform: uppercase;
-	/* ML */
-}
-
-.widget-area h4 a { text-decoration: none; }
-
-#footer-widgets h4
-{
-	background: none;
-	color: #ddd;
-	/* ML */
-	border: none;
-	margin: 0 0 5px;
-	padding: 0;
-}
-
 h5 { font-size: 14px; }
 h6 { font-size: 12px; }
 
@@ -1364,7 +1358,7 @@ input:hover[type="submit"]
 }
 
 #nav .searchform { float: right; }
-.sidebar .searchform { padding: 5px 0 0 15px; }
+.sidebar .searchform { padding: 5px 0 0 0; }
 
 .s
 {
@@ -1380,6 +1374,12 @@ input:hover[type="submit"]
 	background-color: #fff;
 	margin: 2px 2px 0 0;
 }
+
+/* Search Results
+------------------------------------------------------------ */
+
+body.search-results .entry-content, body.search-results .post-info { display: none; }
+body.search-results h2.entry-title a { color: #14748F; }
 
 /* eNews and Update Widget
 ------------------------------------------------------------ */
@@ -1443,6 +1443,7 @@ input:hover[type="submit"]
 	color: #ddd;
 	/* ML */
 	overflow: hidden;
+	min-height: 200px;
 	width: 100%;
 	/* ML */
 }
@@ -1469,6 +1470,16 @@ input:hover[type="submit"]
 	padding: 0;
 }
 
+#footer-widgets h4
+{
+	background: none;
+	color: #ddd;
+	/* ML */
+	border: none;
+	margin: 0 0 5px;
+	padding: 0;
+}
+
 #footer-widgets .textwidget { padding: 0; }
 #footer-widgets .widget_tag_cloud div div { padding: 0; }
 
@@ -1479,6 +1490,7 @@ input:hover[type="submit"]
 	padding: 0 0 10px;
 }
 
+#footer-widgets a, #footer-widgets a:link, #footer-widgets a:visited, #footer-widgets a:active { color: #70BDCC; }
 #footer-widgets ul { margin: 0; }
 #footer-widgets ul li { margin: 0 0 0 0; }
 
@@ -1503,6 +1515,12 @@ input:hover[type="submit"]
 {
 	float: right;
 	width: 295px;
+}
+
+#footer-widgets a.external_icon
+{
+	background: none !important;
+	padding-right: 0;
 }
 
 /* Footer
@@ -1649,9 +1667,10 @@ input:hover[type="submit"]
 /* Gravity Forms
 ------------------------------------------------------------ */
 
-.gform_wrapper { 
-	margin: 0; 
-	padding-top: 0; 
+.gform_wrapper
+{
+	margin: 0;
+	padding-top: 0;
 }
 
 .gform_wrapper h2.gsection_title, .gform_wrapper .gsection_description, .gform_wrapper h3.gform_title
@@ -1678,11 +1697,7 @@ div.entry-content div.ginput_container { padding-top: 0; }
 
 /* MLN */
 div.gform_footer input.button { color: #fff; }
-
-.gform_wrapper .gform_footer input.button, .gform_wrapper .gform_footer input[type=submit]
-{
-	font-size: 16px !important;
-}
+.gform_wrapper .gform_footer input.button, .gform_wrapper .gform_footer input[type=submit] { font-size: 16px !important; }
 
 div.gform_wrapper .ginput_complex label
 {
@@ -1711,8 +1726,8 @@ div.gform_wrapper .gform_footer
 
 .gform_wrapper .top_label .gfield_label
 {
-  color: #333;
-  font-size: 16px;
+	color: #333;
+	font-size: 16px;
 }
 
 .gform_wrapper .gsection
@@ -1724,22 +1739,21 @@ div.gform_wrapper .gform_footer
 }
 
 .gform_wrapper .top_label li.gfield.gf_left_half, 
-.gform_wrapper .top_label li.gfield.gf_right_half {
+.gform_wrapper .top_label li.gfield.gf_right_half
+{
 	margin: 0 0 28px 0;
-    	padding: 10px 0 2px 0;
+	padding: 10px 0 2px 0;
 }
 
 .gform_wrapper .top_label li.gfield.gf_left_third, 
 .gform_wrapper .top_label li.gfield.gf_middle_third, 
-.gform_wrapper .top_label li.gfield.gf_right_third {
+.gform_wrapper .top_label li.gfield.gf_right_third
+{
 	margin: 0 0 28px 0;
-    	padding: 10px 0 2px 0;
+	padding: 10px 0 2px 0;
 }
 
-.gform_wrapper .top_label input.large, .gform_wrapper .top_label select.large, .gform_wrapper .top_label textarea.textarea {
-width: 98%;
-}
-
+.gform_wrapper .top_label input.large, .gform_wrapper .top_label select.large, .gform_wrapper .top_label textarea.textarea { width: 96%; }
 
 /* Chosen JS styling
 ------------------------------------------------------------ */
@@ -1756,8 +1770,8 @@ width: 98%;
 	text-shadow: none;
 }
 
-
 .gform_wrapper .chzn-container .chzn-results li { line-height: 80%; }
+.gform_wrapper .chzn-container .chzn-results .highlighted { background-color: #888; }
 
 /* MLN */
 
@@ -1839,7 +1853,6 @@ body.home-page .entry-title { display: none; }
 ----------------------- */
 
 .widget_taxonomy-drill-down ul li { padding-bottom: 8px; }
-
 form.taxonomy-drilldown-dropdowns select { display: block; }
 
 /* Content tables
@@ -1848,10 +1861,19 @@ form.taxonomy-drilldown-dropdowns select { display: block; }
 .entry-content table
 {
 	font-size: 12px;
-	border-color: #999;
+	border-bottom: #ccc solid 1px;
+	border-color: #ccc;
 	border-style: solid;
 	border-width: 2px 0 0;
-	margin: 0 0 20px;
+	margin: 0;
+}
+
+.entry-content table th
+{
+	font-size: 14px;
+	text-align: left !important;
+	text-transform: uppercase;
+	white-space: nowrap;
 }
 
 .entry-content table ul { margin: 10px; }
@@ -1860,10 +1882,21 @@ form.taxonomy-drilldown-dropdowns select { display: block; }
 .entry-content table td
 {
 	vertical-align: top;
-	padding: 0.5em 2.25em 0.5em 0;
+	border-top: #ccc solid 1px;
+	line-height: 140%;
+	padding: 0.3em 2.25em 0.3em 0;
 }
 
-/* ENTRY: CONTENT: IMAGES */
+
+.entry-content table td a, .entry-content table td a:link, .entry-content table td a:visited, .entry-content table td a:active {
+font-weight: normal;
+letter-spacing: 0.7px;
+}
+
+
+/* ENTRY: CONTENT: IMAGES 
+----------------------- */
+
 #content img
 {
 	background: none repeat scroll 0 0 #FFFFFF;
@@ -1872,8 +1905,14 @@ form.taxonomy-drilldown-dropdowns select { display: block; }
 	-webkit-box-shadow: 2px 2px 8px #888;
 	box-shadow: 2px 2px 8px #888;
 	display: inline-block;
-	margin: 0 20px 20px 2px;
+	margin: 0 0 20px 2px;
 	padding: 0;
+}
+
+#content img.alignright
+{
+	margin-right: 0;
+	padding-right: 0;
 }
 
 .entry-content .wp-post-image
@@ -1950,7 +1989,14 @@ body.archive .taxonomy-description
 }
 
 body.archive .taxonomy-description h1 { font-size: 20px; }
-body.archive h2.entry-title a, body.archive h2.entry-title a:visited { color: #14748F; }
+
+body.archive h2.entry-title a, body.archive h2.entry-title a:visited
+{
+	color: #14748F;
+	font-size: 18px;
+}
+
+body.archive .entry-content p { font-size: 13px; }
 
 body.archive .sidebar
 {
@@ -1960,26 +2006,26 @@ body.archive .sidebar
 
 body.archive #content { width: 860px; }
 
-
 /* Special pages */
-
 .page-id-636 .gform_wrapper h2.gsection_title, 
 .page-id-636 .gform_wrapper .gsection_description, 
-.page-id-636 .gform_wrapper h3.gform_title {
-  background-color: #888;
-  color: #f4f4f4;
-  font-size: 17px;
-  letter-spacing: .5px !important;
-  text-shadow: #444 0px 1px 0px;
-  text-transform: uppercase;
+.page-id-636 .gform_wrapper h3.gform_title
+{
+	background-color: #888;
+	color: #f4f4f4;
+	font-size: 17px;
+	letter-spacing: .5px !important;
+	text-shadow: #444 0px 1px 0px;
+	text-transform: uppercase;
 }
 
-.page-id-636 .gform_wrapper .gsection {
-  border-top: 0px solid #BBB;
-  border-bottom: 0px dotted #CCC;
-  background-color: #888;
-  border-radius: 3px;
-  color: #f4f4f4;
-  margin: 4px 0 2px 0 !important;
-  padding: 4px 0 2px 10px !important;
+.page-id-636 .gform_wrapper .gsection
+{
+	border-top: 0px solid #BBB;
+	border-bottom: 0px dotted #CCC;
+	background-color: #888;
+	border-radius: 3px;
+	color: #f4f4f4;
+	margin: 4px 0 2px 0 !important;
+	padding: 4px 0 2px 10px !important;
 }
