Updated to query-multiple-taxonomies.1.6.1

--- a/wp-content/plugins/query-multiple-taxonomies/templates/checkboxes.html
+++ b/wp-content/plugins/query-multiple-taxonomies/templates/checkboxes.html
@@ -1,10 +1,7 @@
-<div class="taxonomy-drilldown-lists">
+<form method="get" action="{{base-url}}" class="taxonomy-drilldown-checkboxes">
 	{{#taxonomy}}
 	<div id="terms-{{taxonomy}}">
-		<h4>
-			{{title}}
-			{{#clear}} <a href="{{url}}" title="{{title}}">(-)</a>{{/clear}}
-		</h4>
+		<h4>{{title}}</h4>
 		<ul>
 			{{{term-list}}}
 		</ul>
@@ -12,6 +9,7 @@
 	{{/taxonomy}}
 
 	<p>
+		<input type="submit" value="{{submit-text}}" />
 		<a class="taxonomy-drilldown-reset" href="{{reset-url}}">{{reset-text}}</a>
 	</p>
-</div>
+</form>
