--- a/wp-content/plugins/query-multiple-taxonomies/templates/dropdowns.html
+++ b/wp-content/plugins/query-multiple-taxonomies/templates/dropdowns.html
@@ -2,14 +2,17 @@
 	<ul>
 		{{#taxonomy}}
 		<li>
-		<label for="qmtlabel-{{name}}">{{title}}:</label>
-		<select name="{{name}}" id="qmtlabel-{{name}}">
-			<option></option>
-			{{{options}}}
-		</select>
+			<label for="qmt-{{name}}">{{title}}</label>
+			<select id="qmt-{{name}}" name="{{name}}">
+				<option value=''>{{{any-text}}}</option>
+				{{{term-list}}}
+			</select>
 		</li>
 		{{/taxonomy}}
 	</ul>
-	<input type="submit" value="{{submit-text}}" />
-	<a class="taxonomy-drilldown-reset" href="{{reset-url}}">{{reset-text}}</a>
+
+	<p>
+		<input type="submit" value="{{submit-text}}" />
+		<a class="taxonomy-drilldown-reset" href="{{reset-url}}">{{reset-text}}</a>
+	</p>
 </form>
