Added Buddybar/WP admin bar fix.

--- a/wp-content/themes/maine-learning-home/style.css
+++ b/wp-content/themes/maine-learning-home/style.css
@@ -37,6 +37,7 @@ CONTAINERS
 body:not(.wp-admin) {
 padding-top: 0!important;
 }
+li#bp-adminbar-blogs-menu { display: none !important; }
 
 body
 {
