--- a/wp-content/plugins/bebop/core/resources/css/admin.css
+++ b/wp-content/plugins/bebop/core/resources/css/admin.css
@@ -2,19 +2,24 @@
 #bebop_admin_container {
 	min-height:400px;
 	width:99%;
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
 	border:0px solid #00FF00;
 	margin:20px 1% 0 0;
 	border:0px solid #000000;
 }
 #bebop_admin_container a {
 	text-decoration:none;
-	color:#000000;
 }
 #bebop_admin_container a:hover {
-	text-decoration:none;
+	text-decoration:underline;
 }
 
+#bebop_admin_container .button-secondary {
+	margin-right:10px;
+}
+#bebop_admin_container .button-secondary:hover {
+	/*quick fix for button-secondary that are a href's */
+	text-decoration:none;
+}
 .bebop_error_box, .bebop_success_box {
 	display:inline-block;
 	position:absolute;
@@ -33,7 +38,9 @@
 .bebop_success_box {
 	background:#E1FFD6;
 }
-.bebop_admin_box, .postbox h3, .bebop_admin_menu a {
+#bebop_admin_container .bebop_admin_box,
+#bebop_admin_container .postbox h3,
+#bebop_admin_container .bebop_admin_menu {
 	background-image:linear-gradient(bottom, #eeeeee 30%, #e5e5e5 70%);
 	background-image:-o-linear-gradient(bottom, #eeeeee 30%, #e5e5e5 70%);
 	background-image:-moz-linear-gradient(bottom, #eeeeee 30%, #e5e5e5 70%);
@@ -41,10 +48,13 @@
 	background-image:-webkit-gradient(linear, left bottom, left top, color-stop(0.30, #eeeeee), color-stop(0.70, #e5e5e5));
 	background-image:-ms-linear-gradient(bottom, #eeeeee 30%, #e5e5e5 70%);
 }
-.bebop_admin_box {
+#bebop_admin_container .postbox h3 a {
+	color:#000000;
+}
+#bebop_admin_container .bebop_admin_box {
 	padding:10px;
 	border:1px solid #dddddd;
-	font-size:16px;
+	font-size:14px;
 	font-weight:normal;
 	line-height:45px;
 	margin:0 1% 0 0;
@@ -52,62 +62,54 @@
 	border-radius:7px;
 	width:99%;
 }
-.bebop_admin_box a {
-	text-decoration:none;
-	color:#aaaaaa;
-}
-.bebop_admin_box a:hover {
-	text-decoration:underline;
-}
 
-.bebop_logo {
+#bebop_admin_container .bebop_logo {
 	float:left;
 }
 
-.postbox-container {
+#bebop_admin_container .postbox-container {
 	width:49%;
 	margin-right:1%;
 }
 
-.postbox {
+#bebop_admin_container .postbox {
 	margin:22px 0 0 0;
 	border-radius:7px;
 	background:#eeeeee;
 	padding:0px;
 	text-align: justify;
 }
-.postbox h3 {
+#bebop_admin_container .postbox h3 {
 	padding:10px;
 	font-size: 16pt;
 	margin:0;
 	font-weight:normal;
 }
-.postbox.inside {
+#bebop_admin_container .postbox.inside {
 	padding:0px 2px 8px 2px;
 }
-.postbox a {
+#bebop_admin_container .postbox a {
 	text-decoration:none;
 }
-.postbox_table {
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
+#bebop_admin_container .postbox_table {
 	width:100%;
 }
-.postbox_table th {
+#bebop_admin_container .postbox_table th {
 	text-align:center;
 }
-.postbox_table td {
+#bebop_admin_container .postbox_table td {
 	text-align:center;
 }
-.postbox_table td.content {
+#bebop_admin_container .postbox_table td.content {
 	text-align:left;
 	width:60%;
 }
-.center_margin {
+#bebop_admin_container .center_margin {
 	margin-left:auto;
 	margin-right:auto;
 }
-.bebop_table, .bebop_settings_table {
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
+#bebop_admin_container.bebop_table,
+#bebop_admin_container .bebop_settings_table {
 	background-color:#ffffff;
 	width:100%;
 	border:1px solid #cecece;
@@ -116,25 +118,28 @@
 	margin:22px auto;
 	font-size:12px;
 }
-.bebop_table tr.nodata:hover {
+#bebop_admin_container .bebop_table tr.nodata:hover {
 	background:inherit;
 }
-.bebop_table tr:hover {
+#bebop_admin_container .bebop_table tr:hover {
 	background:#eeeeee;
 }
-.bebop_table td, .bebop_table th, .bebop_settings_table td, .bebop_settings_table th {
+#bebop_admin_container .bebop_table td,
+#bebop_admin_container .bebop_table th,
+#bebop_admin_container .bebop_settings_table td,
+#bebop_admin_container .bebop_settings_table th {
 	padding:8px;
 	text-align:center;
 	margin:0px;
 }
-.bebop_table td.content {
+#bebop_admin_container .bebop_table td.content {
 	text-align:left;
 
 }
-.bold {
+#bebop_admin_container .bold {
 	font-weight:bold;
 }
-.bebop_settings_table th {
+#bebop_admin_container .bebop_settings_table th {
 	font-weight:normal;
 	font-size:25px;
 	border-bottom:1px solid #cecece;
@@ -142,14 +147,14 @@
 	text-align:left;
 }
 
-.bebop_table a {
+#bebop_admin_container .bebop_table a {
 	text-decoration:none;
 	color:#000000;
 }
-.width_98 {
+#bebop_admin_container .width_98 {
 	width:98.5%;
 }
-.margin-bottom_22px {
+#bebop_admin_container .margin-bottom_22px {
 	margin-bottom:22px;
 }
 .margin-top_22px {
@@ -158,23 +163,22 @@
 .margin-top_40px {
 	margin-top:40px;
 }
-.bebop_admin_form {
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
+#bebop_admin_container .bebop_admin_form {
 	background-color:#ffffff;
 	width:100%;
 	margin:0 auto 22px auto;
 }
-.bebop_admin_form fieldset {
+#bebop_admin_container .bebop_admin_form fieldset {
 	border:1px solid #cecece;
 	border-radius:7px;
 	padding:0px 0px 5px 0px;
 	margin:0 auto 22px auto;
 	border-spacing:0;
 }
-.bebop_admin_form fieldset p {
+#bebop_admin_container .bebop_admin_form fieldset p {
 	padding: 0 10px;
 }
-.bebop_admin_form span.header {
+#bebop_admin_container .bebop_admin_form span.header {
 	display:block;
 	padding:5px 10px;
 	width:inherit;
@@ -188,7 +192,7 @@
 	text-align:left;
 }
 
-.bebop_admin_form label {
+#bebop_admin_container .bebop_admin_form label {
 	display:inline-block;
 	width:46.5%;
 	text-align:right;
@@ -196,10 +200,10 @@
 	padding:5px;
 	border:0px solid #000;
 }
-.bebop_admin_form input {
+#bebop_admin_container .bebop_admin_form input {
 	padding:5px;
 	margin:5px 0;
 }
-.no_border {
+#bebop_admin_container .no_border {
 	border:0px;
 }
