--- a/wp-content/plugins/navayan-csv-export/ny-csv-ui.css
+++ b/wp-content/plugins/navayan-csv-export/ny-csv-ui.css
@@ -1,25 +1,29 @@
-.iedit:hover{background:#eee}
-.ny-left{clear: left; float: left; margin-right: -325px; width: 100%;}
-.ny-left-widgets{margin-right: 325px;}
-.ny-right{clear: right;float: right;width: 300px; margin-right: 15px;}		 
-.ny-widgets{width: 285px; margin: 0 auto 15px auto; border: 1px solid #DFDFDF; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
-.ny-widgets h3{
-		font-size: 14px;
-		font-weight: 700;
-		padding: 8px 10px;
-		margin:0;
-		color:#777;
-		background: #F1F1F1;
-		background: -o-linear-gradient(top,#F9F9F9,#ECECEC);
-		background: -moz-linear-gradient(center top , #F9F9F9, #ECECEC);
-		background:	-webkit-gradient(linear, center top, center bottom, from(#F9F9F9), to(#ECECEC));
-		filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr='#F9F9F9',EndColorStr='#ECECEC');
-		border-bottom: 1px solid #dfdfdf;
+#nycsvColumns{margin-right: 20px}
+#nycsvColumn1, #nycsvColumn2{width: 410px; display: inline-block; vertical-align: top}
+#nycsvColumn2{margin-left: 20px}
+.widefat td a.button:hover{
+    border: 1px solid #FCCA25;
+    background: #ddd; /* Older browsers */
+    background-image: -webkit-gradient(linear, left top, left bottom, from( #FFF7EF), to( #ffe27a)); /* Saf4+, Chrome */
+    background-image: -webkit-linear-gradient(#FFF7EF, #ffe27a); /* Chrome 10+, Saf5.1+ */
+    background-image:    -moz-linear-gradient(#FFF7EF, #ffe27a); /* FF3.6 */
+    background-image:     -ms-linear-gradient(#FFF7EF, #ffe27a); /* IE10 */
+    background-image:      -o-linear-gradient(#FFF7EF, #ffe27a); /* Opera 11.10+ */
+    background-image:         linear-gradient(#FFF7EF, #ffe27a);
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow:none;
+    -o-box-shadow: none;
+    -ms-box-shadow: none;	
 }
-.ny-widgets .ny-widgets-desc{
-		font-size: 13px;
-		margin: 15px;
+#nycsvColumns blockquote {
+	font: italic 400 18px/26px Georgia, "Bitstream Charter", serif;
+	margin: 1em 0;
+	border: 1px solid #ccc;
+	background:#f5f5f5;
+	color:#666;
+	padding: 10px 18px;
+	border-radius:4px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px
 }
-.ny-widgets-desc p{font-size: 13px}
-.ny-widgets-desc ul{font-size: 13px; list-style: disc outside; margin-left: 12px}
-.ny-widgets-desc ol{font-size: 13px; list-style: decimal outside}
