--- a/wp-content/plugins/bebop/core/resources/css/admin.css
+++ b/wp-content/plugins/bebop/core/resources/css/admin.css
@@ -194,15 +194,35 @@
 
 #bebop_admin_container .bebop_admin_form label {
 	display:inline-block;
+	float:left;
 	width:46.5%;
 	text-align:right;
-	margin:5px 0;
-	padding:5px;
+	margin:0px 0px !important;
+	padding:5px 14px !important;
 	border:0px solid #000;
+	white-space:nowrap;
 }
-#bebop_admin_container .bebop_admin_form input {
-	padding:5px;
-	margin:5px 0;
+#bebop_admin_container .bebop_admin_form label.alt {
+	display:inline-block;
+	float:left;
+	width:46.5%;
+	text-align:right;
+	margin:0px 0px !important;
+	padding:0px 14px !important;
+	border:0px solid #000;
+	white-space:nowrap;background:inherit;
+}
+#bebop_admin_container .bebop_admin_form td {
+	margin:0;
+	padding:8px 0 8px 5px !important;
+}
+#bebop_admin_container .bebop_admin_form input[type=chekbox] {
+	padding:10px;
+	margin:2px 0;
+}
+#bebop_admin_container .bebop_admin_form .auto {
+	display:inline !important;
+	margin:0px 0 0 0 !important;
 }
 #bebop_admin_container .no_border {
 	border:0px;
