--- a/wp-content/plugins/bebop/core/resources/css/user.css
+++ b/wp-content/plugins/bebop/core/resources/css/user.css
@@ -14,48 +14,6 @@
 	padding:3px 0;
 	float:left;
 }
-
-.standard_button {
-	float:left;
-	display:inline-block;
-	font-size:15px;
-	margin:0px auto 10px auto;
-	padding:10px;
-	text-align:center;
-	background-image:linear-gradient(bottom, #FFD492 50%, #FFFACD 50%);
-	background-image:-o-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-moz-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-webkit-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-webkit-gradient(linear, left bottom, left top, color-stop(0.5, #FFD492), color-stop(0.5, #FFE5BC));
-	background-image:-ms-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%); 
-	border:1px solid #FFE5BC;
-	border-radius:4px;
-	text-decoration:none;
-	color:#000000;
-}
-.provider_button {
-	min-width:117px;
-	background-image:linear-gradient(bottom, #007FFF 50%, #1E90FF 50%);
-	background-image:-o-linear-gradient(bottom, #007FFF 50%, #1E90FF 50%);
-	background-image:-moz-linear-gradient(bottom, #007FFF 50%, #1E90FF 50%);
-	background-image:-webkit-linear-gradient(bottom, #007FFF 50%, #1E90FF 50%);
-	background-image:-webkit-gradient(linear, left bottom, left top, color-stop(0.5, #007FFF), color-stop(0.5, #1E90FF));
-	background-image:-ms-linear-gradient(bottom, #007FFF 50%, #1E90FF 50%);
-	border:1px solid #1E90FF;
-	color:#FFFFFF !important;
-}
-.standard_button:hover,
-.provider_button:hover {
-	background-image:linear-gradient(bottom, #FFD492 50%, #FFFACD 50%);
-	background-image:-o-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-moz-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-webkit-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%);
-	background-image:-webkit-gradient(linear, left bottom, left top, color-stop(0.5, #FBEC5D), color-stop(0.5, #FFFACD));
-	background-image:-ms-linear-gradient(bottom, #FBEC5D 50%, #FFFACD 50%); 
-	color:#000000 !important;
-	border:1px solid #FFFACD !important;
-	text-decoration:none;
-}
 .button_container:active {
 	padding-top:4px;
 	padding-bottom:2px;
@@ -138,6 +96,11 @@
 }
 
 .rss_feed_container {
+	margin:10px 5px;
 	float:left;
-	max-width:82.5%;
+	max-width:82%;
+	clear:both;
+}
+.clear_above {
+	clear:both;
 }
