--- a/wp-content/plugins/wp-fb-autoconnect/style.css
+++ b/wp-content/plugins/wp-fb-autoconnect/style.css
@@ -37,9 +37,17 @@
 
 .fbLoginButton{
 	display:block;
+	position:relative;
+	top:0;
+    padding:0;
+    margin:0;
+    border:0;
 	height:18px;
-	margin-top:7px;
-	text-align:center;
+	vertical-align:top;
+}
+
+.fb_iframe_widget span{
+    vertical-align:top !important;
 }
 
 .wpfb-widget-avatar{
